--- a/src/fonts/iconmoon/variables.scss
+++ b/src/fonts/iconmoon/variables.scss
@@ -30,6 +30,6 @@ $icon_tick: "\e93c";
 $icon_google: "\e941";
 $icon_instagram_new: "\e943";
 $icon_ship: "\e944";
-$icon_gift: "\e947";
 $icon_whatsapp: "\ea93";
+$icon_location: "\e947";
 
