--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,6 +8,7 @@ $baseDark: #030303;
 $link-color: #4a90e2;
 $white: #fff;
 $red: #e00000;
+$borderColor: #f2f3f3;
 /*Font-weight variables*/
 $light: 300;
 $normal: 400;
