--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -16,6 +16,8 @@
         width: 94%;
         margin: 0;
         padding: 0;
+        z-index: 2;
+        background-color: $white;
         ._item{
             border: 1px solid;
             padding: 10px;
