--- a/src/components/sideBar/sideBar.scss
+++ b/src/components/sideBar/sideBar.scss
@@ -9,6 +9,7 @@
     background-color: $white;
     top: 0;
     left: 0;
+    overflow-y: scroll;
     .main-menu{
         border-top: 1px solid $borderColor;
         ul{
@@ -16,19 +17,20 @@
             margin: 0;
             padding: 0;
             li{
-                padding: 15px 20px;
                 position: relative;
-                &::before{
+                a{
+                    padding: 15px 20px 15px 30px;
+                    display: block;
+                    color: $black;
+                    text-decoration: none;
+                    z-index: 4;
+                    font-size: 15px;
+                }
+                .icon_up, .icon_down{
                     position: absolute;
-                    content: '';
-                    border: 1px solid;
                     right: 30px;
-                    transform: rotate(-45deg);
-                    border-right: 0px;
-                    border-top: 0px;
-                    height: 8px;
-                    width: 8px;
-                    top: 22px;
+                    top: 21px;
+                    font-size: 12px;
                 }
             }
             li:nth-last-child(2) {
@@ -36,12 +38,32 @@
                     content: none;
                 }
             }
+            .sub-menu-1{
+                background-color: $borderColor;
+                ul {
+                    .sub-menu-item{
+                        a{
+                            font-size: 14px;
+                            padding: 15px;
+                            display: block;
+                            border-bottom: 1px solid lighten($color: $bg-black, $amount: 60);
+                            margin-left: 45px;
+                            text-decoration: none;
+                            color: $black;
+                        }
+                    }
+                }
+            }
         }
     }
     .icon_close{
         z-index: 6;
         position: absolute;
-        right: 30px;
+        right: 14px;
+        font-size: 12px;
+        color: $black;
+        font-weight: bold;
+        top: 14px;
     }
     .top-section{
         display: flex;
