--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -63,3 +63,10 @@
   ul{
     margin: 0px;
   }
+  label{
+    margin-bottom: 0px;
+  }
+  .error-label{
+    color: red;
+    font-size: 10px;
+  }
