--- a/src/components/common/Password/PasswordInput.scss
+++ b/src/components/common/Password/PasswordInput.scss
@@ -1,9 +1,11 @@
 @import './../../../scss/variables';
 .w--password_input {
     position: relative;
-    margin: 0px 0px 20px 0px;
+    margin: 0px 0px 10px 0px;
     border: 0px;
-    
+    .form-control{
+        box-shadow: none;
+    }
     &:before {
         position: absolute;
         left: 19px;
@@ -32,8 +34,8 @@
     }
     .error-label,
     .text-description {
-        font-size: 14px;
-        margin-top: 5px;
+        font-size: 12px;
+        margin-top: 1px;
         display: block;
     }
     &.has-error {
