--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -66,6 +66,10 @@
             img{
                 height: 20px;
             }
+            a{
+                text-decoration: none;
+                color: $black;
+            }
             .text{
                 padding: 10px 5px;
                 margin-top: 4px;
