--- a/src/components/common/MobileInput/mobileinput.scss
+++ b/src/components/common/MobileInput/mobileinput.scss
@@ -44,7 +44,7 @@
     }
     &.has-error {
         input{
-            border: 1px solid $red;
+            border-bottom: 1px solid $red;
         }
     }
 }
