--- a/src/components/common/Password/PasswordInput.scss
+++ b/src/components/common/Password/PasswordInput.scss
@@ -40,7 +40,7 @@
     }
     &.has-error {
         input{
-            border: 1px solid $red;
+            border-bottom: 1px solid $red;
         }
     }
 }
