social logins server side rendering code added

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,7 @@
 @import "~bootstrap/scss/bootstrap";
 @import "variables";
 @import "./../fonts/iconmoon/style.scss";
+@import "swiper/swiper.scss";
 
   @font-face {
     font-display: swap;
