--- a/src/components/auth/auth.scss
+++ b/src/components/auth/auth.scss
@@ -66,17 +66,16 @@
                 height: 20px;
                 width: 20px;
             }
-            .fb, .gplus{
-                padding: 10px;
-                border: 1px solid lighten($bg-black, 60%);
-                border-radius: 8px;
-                min-width: 150px;
-                .title{
-                    margin-left: 20px;
-                    font-weight: $medium;
-                    letter-spacing: 1px;
-                    text-transform: capitalize;
+            .gplus{
+                button {
+                    width: 150px;
+                    outline: none;
                 }
+            }
+            .fb-img{
+                position: absolute;
+                top: 12px;
+                left: 12px;
             }
         }
     }
